test/error/semantic/use_before_definition_var.kat
func main(argc: int, argv: str) => int {
  let x: int = 1;
  let y: int = 2;
  let result: int = x + y - z;
}
